# gen-ai-sdk-cookbook

deep-research/: README.md
gen-ai/: README.md
gen-ai/examples/: README.md
gen-ai/examples/a2ui/a2ui-nextjs/: .prettierignore  a2ui-react-0.8.0.tgz  package-lock.json  package.json  tsconfig.json
gen-ai/examples/evaluation/metrics/: pyproject.toml
gen-ai/examples/evaluation/metrics/generation/: example_geval_refusal.py
gen-ai/examples/evaluation/metrics/generation/dataset_examples/: simple_summarization_data.csv
gen-ai/examples/evaluations/data_analyst_agent_evaluation/: Makefile  README.md  __init__.py  conftest.py  metric_tracking.py  pyproject.toml  questions.py  runner.py  utils.py
gen-ai/examples/evaluations/data_analyst_agent_evaluation/evaluations/: __init__.py  agent_evaluator.py  test_evaluate_agent.py
gen-ai/examples/evaluations/data_analyst_agent_evaluation/evaluators/: __init__.py  base.py  query_evaluator_001.py  query_evaluator_002.py  query_evaluator_003.py  query_evaluator_004.py  query_evaluator_005.py  query_evaluator_006.py  query_evaluator_007.py  query_evaluator_008.py  query_evaluator_009.py  query_evaluator_010.py  query_evaluator_011.py  query_evaluator_012.py  query_evaluator_013.py  query_evaluator_014.py  query_evaluator_015.py  query_evaluator_016.py  query_evaluator_017.py  query_evaluator_018.py  query_evaluator_019.py  query_evaluator_020.py  query_evaluator_021.py  query_evaluator_022.py  query_evaluator_023.py
gen-ai/examples/evaluations/data_analyst_agent_evaluation/metrics/: __init__.py  completeness.py  deterministic.py  resolution_rate.py  sql_correctness.py
gen-ai/examples/evaluations/data_analyst_agent_evaluation/tests/: test_query_001.py  test_query_002.py  test_query_003.py  test_query_004.py  test_query_005.py  test_query_006.py  test_query_007.py  test_query_008.py  test_query_009.py  test_query_010.py  test_query_011.py  test_query_012.py  test_query_013.py  test_query_014.py  test_query_015.py  test_query_016.py  test_query_017.py  test_query_018.py  test_query_019.py  test_query_020.py  test_query_021.py  test_query_022.py  test_query_023.py
gen-ai/examples/evaluations/experiment_fewshot_metric_level/: .env.example  .gitignore  Makefile  README.md  SETUP.md  __init__.py  config.py  evaluator.py  experiment_fewshot.py  pyproject.toml  utils.py
gen-ai/examples/evaluations/experiment_fewshot_metric_level/data/: fewshot_examples.json
gen-ai/guides/: README.md
gen-ai/how-to-guides/: README.md
gen-ai/how-to-guides/build_end_to_end_rag_pipeline/001_your_first_rag_pipeline/: pipeline.py  pyproject.toml
gen-ai/how-to-guides/build_end_to_end_rag_pipeline/002_dynamic_step/: pipeline.py  pyproject.toml
gen-ai/how-to-guides/build_end_to_end_rag_pipeline/003_implement_semantic_routing/: pipeline.py  pyproject.toml
gen-ai/how-to-guides/build_end_to_end_rag_pipeline/004_adding_document_references/: pipeline.py  pyproject.toml
gen-ai/how-to-guides/build_end_to_end_rag_pipeline/005_simple_guardrail/: pipeline.py  pyproject.toml
gen-ai/how-to-guides/build_end_to_end_rag_pipeline/006_query_transformation/: pipeline.py  pyproject.toml
gen-ai/how-to-guides/build_end_to_end_rag_pipeline/007_multimodal_input_handling/: pyproject.toml
gen-ai/how-to-guides/build_end_to_end_rag_pipeline/008_caching/: pipeline.py  pyproject.toml
gen-ai/how-to-guides/build_end_to_end_rag_pipeline/009_parallel_pipeline_processing/: README.md  parallel_pipeline.py  pyproject.toml
gen-ai/how-to-guides/build_end_to_end_rag_pipeline/010_pipeline_step_exclusion/: README.md  pipeline.py  pyproject.toml
gen-ai/how-to-guides/execute_a_pipeline/: README.md  execute_pipeline.py  pyproject.toml
gen-ai/how-to-guides/human_in_the_loop/: README.md  hitl_orchestration.py  pyproject.toml  setup.bat
gen-ai/how-to-guides/index_your_data/: pyproject.toml
gen-ai/how-to-guides/pausing_flow_for_debugging/: README.md  debug_pause.py  pyproject.toml  setup.sh
gen-ai/how-to-guides/run_pipeline_on_a_server/: README.md  main.py  pipeline.py  pyproject.toml  run.py
gen-ai/how-to-guides/trace_your_pipeline/: README.md  pyproject.toml  trace_pipeline.py
gen-ai/how-to-guides/utilize_language_model_request_processor/: README.md
gen-ai/how-to-guides/utilize_language_model_request_processor/002_produce_consistent_output_from_lm/: README.md  pyproject.toml  structured_output_demo.py
gen-ai/how-to-guides/utilize_language_model_request_processor/003_stream_lm_output/: .env.example  README.md  pyproject.toml  stream_output_demo.py
gen-ai/tutorials/: README.md
gen-ai/tutorials/generation/: README.md
(+105 files in other folders)
