[project]
name = "experiment-fewshot-metric-level"
version = "0.1.0"
description = "Few-shot experiment with metric-level few-shot support"
requires-python = ">=3.11,<3.14"
dependencies = [
    "gllm-evals[deepeval,langchain,ragas]>=0.1.1",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
priority = "primary"

[[tool.uv.index]]
name = "gen-ai-internal"
url = "https://glsdk.gdplabs.id/gen-ai-internal/simple/"
priority = "supplemental"

[[tool.uv.index]]
name = "gen-ai"
url = "https://glsdk.gdplabs.id/gen-ai/simple/"
priority = "supplemental"

[tool.uv.sources]
gllm-evals = { index = "gen-ai-internal" }
gllm-core = { index = "gen-ai-internal" }
gllm-inference = { index = "gen-ai-internal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
