[project]
name = "produce-consistent-output-from-lm"
version = "0.0.0"
description = "Produce consistent output from LM example"
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "gllm-core==0.4.24",
    "gllm-inference==0.6.29",
    "python-dotenv>=1.0.0,<2.0.0",
]

[[tool.uv.index]]
name = "gen-ai-internal"
url = "https://glsdk.gdplabs.id/gen-ai-internal/simple/"

[tool.uv.sources]
gllm-core = { index = "gen-ai-internal" }
gllm-inference = { index = "gen-ai-internal" }